--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=erpnew
 erpnext.api.url=http://erpnext.localhost:8001
 erpnext.api.key=84e4f7f7cba7704
 erpnext.api.secret=887737016a5ab84
+
+erpnext.default_payment_account=Cash - ID
+erpnext.default_payment_account_currency=USD
